--- a/Lexical Analyser using Lex Tool/lexical.tex
+++ b/Lexical Analyser using Lex Tool/lexical.tex
@@ -1,6 +1,6 @@
-% Created 2020-01-13 Mon 15:22
+% Created 2020-01-13 Mon 15:25
 \documentclass[11pt]{article}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{fixltx2e}
 \usepackage{graphicx}
@@ -60,7 +60,11 @@ Table t[100];
 int t_index = 0,base = 1000,flag = 0,fg[20],cn = 0; 
 char symbols[20][20],values[20][20];
 %}
-keyword ("auto"|"break"|"case"|"char"|"const"|"continue"|"default"|"do"|"double"|"else"|"enum"|"extern"|"float"|"for"|"goto"|"if"|"int"|"long"|"register"|"return"|"short"|"signed"|"sizeof"|"static"|"struct"|"switch"|"typedef"|"union"|"unsigned"|"void"|"volatile"|"while")
+keyword ("auto"|"break"|"case"|"char"|"const"|"continue"|"default"|
+"do"|"double"|"else"|"enum"|"extern"|"float"|"for"|"goto"|"if"|
+"int"|"long"|"register"|"return"|"short"|"signed"|"sizeof"|
+"static"|"struct"|"switch"|"typedef"|"union"|"unsigned"|"void"|
+"volatile"|"while")
 function [a-zA-Z_][a-zA-Z0-9_]*[(].*[)]
 identifier [a-zA-Z_][a-zA-Z0-9_]*
 int_constant [0-9]+
@@ -70,7 +74,8 @@ float_constant [0-9]+.[0-9]+
 {keyword} {
     int i = 0;
     char s[10]; strcpy(s, yytext);
-    while(s[i++] != '\0') if(s[i] == ' ' || s[i] == '\t' || s[i] == '\n') s[i] = ' ';
+    while(s[i++] != '\0') if(s[i] == ' ' ||
+ s[i] == '\t' || s[i] == '\n') s[i] = ' ';
     printf("%s - keyword\n", s);
     if(strcmp(s,"int")==0) flag = 2;
     else if(strcmp(s,"float")==0) flag  = 4;
@@ -100,7 +105,8 @@ int main(int argc, char* argv[])
     yylex();
     printf("SYMBOL TABLE\nTYPE\tSYMBOL\tSIZE\tADDRESS\tVALUE\n");
     for (int i = 0; i<cn ;i++){
-        printf("%s\t %s\t %d\t %d\t %s\n",fg[i]==2?"int":"float",symbols[i],fg[i],base,values[i]);
+        printf("%s\t %s\t %d\t %d\t %s\n",fg[i]==2?"int":"float",
+symbols[i],fg[i],base,values[i]);
         base = base+ fg[i];
     }
     return 0;
